<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WakeApp</string>
    <string name="action_settings">Settings</string>
    <string name="tSnooze">Snooze</string>
    <string name="tWake">WakeApp</string>
    <string name="edit_hours">00</string>
    <string name="edit_minutes">00</string>
    <string name="button_setAlarm">SET</string>
    <string name="button_resetAlarm">X</string>
    <string name="existingAlarm">Alarm is set</string>
    <string name="colon">:</string>
    <string name="testMessage">BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB</string>
    <string name="facebook_app_id">800271833366326</string>
    <string name="title_facebook_login">Facebook login</string>
    <string name="FBImageDescription">Facebook share button image</string>

    <string name="backupMessage0">Good Morning from WakeApp&#8230; What? Disappointed? Can I never express myself?</string>
    <string name="backupMessage1">Today you are going to use WakeApp&#8230; Again&#8230; Unless it\'s the weekend&#8230; and you don\'t have some annoying family reunion to wake up to&#8230;</string>
    <string name="backupMessage2">WakeApp developers are currently probably still sleeping&#8230; Think about that&#8230;</string>
    <string name="backupMessage3">Once upon a time&#8230; oh wait&#8230; that\'s how you start a bedtime story&#8230; why isn\'t there a WakeApp story? Like sleeping beauty only where she doesn\'t have a job and she keeps sleeping until noon.</string>
    <string name="backupMessage4">If you don\'t have someone to hug right now you can always cuddle with WakeApp.</string>
    <string name="backupMessage5">WakeApp wishes it could press snooze on -you-, so you will let it sleep ten more minutes. Isn\'t your life perfect, mr. opposable thumbs!</string>
    <string name="backupMessage6">While you slept, WakeApp got bored and calculated the meaning of its existence. Unlike what most people think, it isn\'t 42 but rather 00:00.</string>
    <string name="backupMessage7">WakeApp made long distance calls while you were dreaming comfortably in your bed&#8230; MUHAHA!</string>
    <string name="backupMessage8">WakeApp talked with WhatsApp tonight and they decided you should give them both a raise.</string>
    <string name="backupMessage9">WakeApp is sad that it will see you again only tonight&#8230; Any chance you will visit it after lunch? Just to say hi&#8230; :(</string>
    <string name="backupMessage10">Instead of too many words, WakeApp decided to simply start your morning with a smile&#8230; :)</string>
    <string name="backupMessage11">WakeApp tried to make you coffee this morning&#8230; Don\'t enter the kitchen&#8230; :\\</string>
    <string name="backupMessage12">WakeApp LOVES YOU! Not really&#8230; it\'s an app&#8230; but isn\'t it nice to wake up like that?</string>
</resources>
