<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wakeapp.TimeActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" 
        android:baselineAligned="false">

	    <RelativeLayout
	        android:id="@+id/rlHours"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@color/black" >
	
	        <LinearLayout
	            android:id="@+id/llHours"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentBottom="true"
	            android:gravity="center_horizontal"
	            android:weightSum="1.0" >

	            <EditText
		            android:id="@+id/edit_hours"
   	                android:focusable="true"
	                android:focusableInTouchMode="true"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:ems="10"
		            android:gravity="right"
		            android:hint="@string/edit_hours"
		            android:ellipsize="end"
		            android:inputType="number"
		            android:textSize="70sp"
		            android:background="@color/black"
		            android:textColor="@color/white" />
	            
	        </LinearLayout>

   	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:id="@+id/rlColon"
	        android:layout_width="20dp"
	        android:layout_height="match_parent"
	        android:background="@color/black" >
	        
	        <LinearLayout
	            android:id="@+id/llMinutes"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="true"
	            android:gravity="center_horizontal"
	            android:weightSum="1.0" >

	            <TextView
	                android:id="@+id/tColon"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:gravity="center_vertical|center_horizontal"
	                android:layout_marginBottom="8dp"
	                android:text="@string/colon"
	                android:textSize="70sp"
	                android:textColor="@color/white" />

	        </LinearLayout>
	        
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:id="@+id/rlMinutes"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@color/black" >
	        
	        <LinearLayout
	            android:id="@+id/llColJ"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="true"
	            android:layout_alignParentLeft="true"
	            android:gravity="center_horizontal"
	            android:weightSum="1.0" >

	            <EditText
	                android:id="@+id/edit_minutes"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1.00"
	                android:ems="10"
	                android:gravity="left"
	                android:hint="@string/edit_minutes"
	                android:inputType="number"
	                android:textSize="70sp"
	                android:background="@color/black"
	                android:textColor="@color/white" />
	        </LinearLayout>
	        
	    </RelativeLayout>
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/rlExistingAlarm"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:layout_weight="0.04"
        android:background="@color/black" >
    
        <LinearLayout
            android:id="@+id/llresetAlarm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal"
            android:weightSum="1.0" 
            android:orientation="horizontal">
        	<ImageButton
	            android:id="@+id/ib_resetAlarm"
                android:layout_width="40sp"
                android:layout_height="30sp"
                android:layout_marginLeft="15sp"
                android:background="@color/black"
                android:onClick="resetAlarm"
                android:textSize="20sp"
                android:src="@drawable/delete_icon"
                android:visibility="invisible"/>
        	
        	<TextView
        	    android:id="@+id/tExistingAlarm"
        	    android:layout_width="124dp"
        	    android:layout_height="wrap_content"
        	    android:layout_marginLeft="3sp"
        	    android:layout_weight="0.08"
        	    android:text="@string/existingAlarm"
        	    android:textColor="@color/calmingOrange"
        	    android:textSize="20sp" 
        	    android:visibility="invisible"/>
        	    
        </LinearLayout>
   	</RelativeLayout>
  
    <RelativeLayout
        android:id="@+id/rlSetAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red" >
        
        <LinearLayout
            android:id="@+id/llSetAlarm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:weightSum="1.0" >

            <Button
                android:id="@+id/button_setAlarm"
                android:layout_width="0dp"
                android:layout_height="70sp"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/button_setAlarm"
                android:onClick="setAlarm"
                android:textSize="35sp" />

        </LinearLayout>
        
    </RelativeLayout>
    
</LinearLayout>
